@@ -11,6 +11,8 @@ import io.opentelemetry.javaagent.extension.instrumentation.InstrumentationModul
 import io.opentelemetry.javaagent.extension.instrumentation.internal.injection.ClassInjector;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
+import net.bytebuddy.utility.JavaModule;
 
 /**
  * This class is internal and is hence not for public use. Its APIs are unstable and can change at
@@ -60,5 +62,17 @@ public interface ExperimentalInstrumentationModule {
    */
   default List<String> agentPackagesToHide() {
     return Collections.emptyList();
+  }
+
+  /**
+   * Some instrumentation need to access JPMS modules that are not accessible by default, this
+   * method provides a way to access those classes like the "--add-opens" JVM command.
+   *
+   * @return map of module to open as key, list of packages as value.
+   */
+  // TODO: when moving this method outside of experimental API, we need to decide using JavaModule
+  // instance or a class FQN in the map entry, as it could lead to some limitations
+  default Map<JavaModule, List<String>> jpmsModulesToOpen() {
+    return Collections.emptyMap();
   }
 }
